--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-123
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>flex</title>
+	
+</head>
+<body>
+	hello
+</body>
+</html>
