--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>flex</title>
-	
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-	hello
+<h1>hh2</h1>
 </body>
 </html>
